--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>ashisoma</artifactId>
+	<groupId>com.rms</groupId>
+	<artifactId>rms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Rms</name>
+	<name>RentalManagementSystem</name>
 	<description>A rental app</description>
 	<properties>
 		<java.version>11</java.version>
@@ -36,8 +36,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.rms</groupId>
+			<artifactId>rms</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
-
+	<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		<version>2.0.1.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.bval</groupId>
+		<artifactId>bval-jsr</artifactId>
+		<version>2.0.2</version>
+	</dependency>
 	<build>
 		<plugins>
 			<plugin>
@@ -46,5 +65,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
