relationships and  errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/akiba
-spring.datasource.username=postgres
-spring.datasource.password=Pg13001$#Here
+spring.datasource.url=jdbc:postgresql://localhost:5432/rms
+spring.datasource.username=onesmus
+spring.datasource.password=ashisoma1756
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
