--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/rms
-spring.datasource.username=onesmus
-spring.datasource.password=ashisoma1756
+spring.datasource.username=postgres
+spring.datasource.password=ashisoma12
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 
 server.port =8081
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
