--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+#
+#spring.datasource.maxActive=10
+#spring.datasource.maxIdle=5
+#spring.datasource.minIdle=2
+#spring.datasource.initialSize=5
+#spring.datasource.removeAbandoned=true
 
 server.error.include-message=always
 
